remove overflow issue

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -19,6 +19,8 @@
     --fs-sub-title: 1.25rem;
     /* 50px */
     --fs-section-title: 3.125rem;
+    /* 40px */
+    --cta-title: 2.5rem;
 
     /* =============== padding and margins =============== */
     --m-1: .5rem;
@@ -48,6 +50,30 @@
     --z-tooltip: 10;
 
 }
+
+@media screen and (max-width: 768px) {
+    :root {
+        /* 16px */
+        --fs-body: 1rem;
+        /* 54px */
+        --fs-hero-title: 3.5rem;
+        /* 20px */
+        --fs-sub-title: 1.25rem;
+        /* 34px */
+        --fs-section-title: 2.125rem;
+
+    }
+}
+
+@media screen and (max-width: 921px) {
+    :root {
+        /* 40px */
+        --cta-title: 2rem;
+
+    }
+}
+
+
 
 /* =============== Base =============== */
 
@@ -109,6 +135,7 @@ body {
     max-width: 1300px;
     width: calc(100% - .5rem);
     margin: 0 auto;
+    overflow: hidden;
 }
 
 .grid {
@@ -354,7 +381,7 @@ body {
 
 .destination__container {
     margin: 85px auto;
-    grid-template-columns: repeat(auto-fill, minmax(400px, 400px));
+    grid-template-columns: repeat(3, 1fr);
     justify-content: center;
 }
 
@@ -515,7 +542,7 @@ body {
 
 .cta__container h2 {
     color: var(--clr-white);
-    font-size: 2.5rem;
+    font-size: var(--cta-title);
     font-weight: 400;
 }
 
@@ -589,6 +616,12 @@ body {
 
 
 /* =============== Media Queries =============== */
+@media screen and (max-width: 968px) {
+    .destination__container {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
 @media screen and (max-width: 768px) {
     .header {
         background-color: #000;
@@ -626,7 +659,24 @@ body {
         transition: .5s;
         backdrop-filter: blur(10px);
     }
+
+    .cta__container {
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .destination__container {
+        grid-template-columns: 1fr;
+    }
+
+    .swiper {
+        max-width: 100%;
+        height: auto;
+
+    }
 }
+
+
 
 @media screen and (max-width: 1145px) {
     .blogs__container {
@@ -732,14 +782,6 @@ body {
 
 }
 
-
-@media screen and (max-width: 768px) {
-    .swiper {
-        max-width: 600px;
-        height: auto;
-
-    }
-}
 
 @media screen and (max-width: 600px) {
     .blogs__container {
